--- a/sicende_fi.css
+++ b/sicende_fi.css
@@ -66,7 +66,7 @@ em{
 #souligne{
     font-size: 2em;
     text-decoration: underline;
-    text-shadow: 1px 1px 2px rgb(136, 3, 141), 0 0 1em rgb(190, 189, 189), 0 0 0.2em rgb(84, 2, 100);
+    text-shadow: 1px 1px 2px #88038d, 0 0 1em rgb(190, 189, 189), 0 0 0.2em rgb(84, 2, 100);
 }
 
 #soulignepetit{
@@ -79,6 +79,12 @@ em{
 .btn-group{
     color: black;
 }
+
+.btn-primary{
+    background-color:  #88038d;
+}
+
+
 
 
 /*CSS texte catégorie*/
